fix(chip-set): adjust to work with new outlined styles
BREAKING CHANGE: With this change, the field label has moved up a bit,
which means the field now requires some whitespace above it, or the label
will intersect with the element above. When the field is used with
`limel-form`, spacing is already taken care of.

fix: Lundalogik/crm-feature#1516

--- a/src/components/chip-set/chip-set.scss
+++ b/src/components/chip-set/chip-set.scss
@@ -13,6 +13,7 @@
  * @prop --background-color-disabled: Background color of the field when type is set to input and the component is disabled or readonly.
  * @prop --input-chip-set-selected-chip-color: Color of the highlight around selected chips in input chip-sets.
  */
+$height-of-chip-set-input: pxToRem(36);
 
 .mdc-chip {
     @include is-elevated-inset-clickable;
@@ -76,8 +77,7 @@ limel-icon.mdc-chip__icon.mdc-chip__icon--leading {
     min-height: $height-of-mdc-text-field;
 
     &.mdc-chip-set--input {
-        padding-top: $padding-top-of-chipset-input;
-        padding-bottom: 0;
+        padding: pxToRem(8);
         padding-right: pxToRem(
             32
         ); // This leaves space for "clear all" button and avoids overlapping with chips
@@ -109,7 +109,7 @@ limel-icon.mdc-chip__icon.mdc-chip__icon--leading {
         height: pxToRem(22);
 
         &:hover {
-            background-color: rgba($lime-deep-red, 0.2);
+            background-color: rgba(var(--color-red-default), 0.2);
 
             svg {
                 transform: scale(0.7);
@@ -128,32 +128,27 @@ limel-icon.mdc-chip__icon.mdc-chip__icon--leading {
     @include mdc-states-hover-opacity(0);
     @include mdc-states-focus-opacity(0, true);
 
-    border-bottom-style: solid;
-    border-bottom-width: pxToRem(1);
-
     width: 100%;
     height: auto;
     cursor: text;
 
     .mdc-text-field__input {
         width: auto;
-        height: $height-of-chip;
-        line-height: $height-of-chip;
+        height: $height-of-chip-set-input;
+        line-height: $height-of-chip-set-input;
         padding: 0 pxToRem(12);
-        margin-bottom: pxToRem(8);
 
         flex-grow: 1;
         flex-shrink: 0;
-
-        border-bottom: none;
 
         &.hidden {
             // This class is added, as soon as there is a chip selected and displayed
             // This input field should not be visually visible as it breaks the UI in some cases
             // But it should be rendered to be able to tab between fields and do other keyboard commands /Kia
+            transition: all 0s;
             opacity: 0;
             position: absolute;
-            z-index: -100;
+            z-index: -100; // to let users interact with chips, in case they're covered
         }
     }
 }
@@ -167,11 +162,20 @@ limel-icon.mdc-chip__icon.mdc-chip__icon--leading {
 }
 
 .mdc-floating-label {
+    @include looks-like-input-label;
     &.mdc-text-field--required::after {
         content: '*';
     }
-    &.force-float {
+    &.lime-floating-label--float-above,
+    &.lime-floating-label--float-above.mdc-floating-label--float-above {
         @include label--float-above;
+        top: $floating-label-top-value;
+    }
+}
+
+.lime-notched-outline--notched {
+    .mdc-notched-outline__notch {
+        border-top: 1px solid transparent !important;
     }
 }
 
@@ -185,7 +189,7 @@ limel-icon.mdc-chip__icon.mdc-chip__icon--leading {
 
     position: absolute;
     right: pxToRem(8);
-    top: pxToRem(26);
+    top: pxToRem(18);
 
     opacity: 0; // Is hidden, but can receive focus (such as when navigating through tab indexes).
 
@@ -208,16 +212,9 @@ limel-icon.mdc-chip__icon.mdc-chip__icon--leading {
         }
 
         .mdc-floating-label {
-            &:not(.force-float) {
+            &:not(.lime-floating-label--float-above) {
                 padding-left: pxToRem(40);
             }
-        }
-    }
-
-    &.has-chips,
-    &.mdc-text-field--focused {
-        .search-icon {
-            transform: translateY(6px);
         }
     }
 
